--- a/public/register/style.css
+++ b/public/register/style.css
@@ -206,8 +206,12 @@ input[type="submit"] {
 
 /* Form for mobile screens */
 @media (max-width: 600px) {
+  form {
+    padding-top: 0;
+  }
+
   .formcontainer {
-    margin-top: 4vh;
+    padding-top: 4vh;
   }
 
   .forminput {
